social banner attempt 3

--- a/index.html
+++ b/index.html
@@ -47,16 +47,15 @@
 
 <body>    
 
-    <div class="top-social-banner">
-      <span class="social-label">Connect:</span>
-      <a href="https://www.facebook.com/people/Inform-the-Vote-NJ/61558980497931/" target="_blank" class="social-icon-link" aria-label="Facebook">
-          <img src="assets/facebookLogo.png" alt="Facebook" class="social-icon" />
+    <div style="display: flex; align-items: center; justify-content: center; background-color: #f9f9f9; border-bottom: 1px solid #ccc; padding: 10px 0; gap: 20px;">
+      <a href="https://www.facebook.com/people/Inform-the-Vote-NJ/61558980497931/" target="_blank" aria-label="Facebook">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 32px; width: 32px;">
       </a>
-      <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" class="social-icon-link" aria-label="YouTube">
-          <img src="assets/youtubeIcon.png" alt="YouTube" class="social-icon" />
+      <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="height: 32px; width: 32px;">
       </a>
-      <a href="https://informthevotenj.substack.com/subscribe" target="_blank" class="social-icon-link" aria-label="Email Updates via Substack">
-          <img src="assets/substackIcon.png" alt="Substack Newsletter" class="social-icon" />
+      <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Substack_Logo.png" alt="Substack" style="height: 32px; width: 32px;">
       </a>
     </div>
 
