--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
 
 <body>    
 
-    <div style="display: flex; align-items: center; justify-content: center; background-color: #f9f9f9; border-bottom: 1px solid #ccc; padding: 10px 0; gap: 20px;">
-      <a href="https://www.facebook.com/people/Inform-the-Vote-NJ/61558980497931/" target="_blank" aria-label="Facebook">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 32px; width: 32px;">
+    <div style="display: flex; align-items: center; justify-content: center; background-color: #f9f9f9; border-bottom: 1px solid #ccc; padding: 12px 0; gap: 24px;">
+      <span style="font-weight: bold; font-size: 1rem; color: #333;">Connect:</span>
+      <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 30px; width: 30px;">
       </a>
       <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="height: 32px; width: 32px;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
       </a>
       <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Substack_Logo.png" alt="Substack" style="height: 32px; width: 32px;">
+          <img src="https://seeklogo.com/images/S/substack-logo-DA74D7C2FE-seeklogo.com.png" alt="Substack" style="height: 30px; width: 30px;">
       </a>
     </div>
 
