social banner attempt 5

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>    
 
     <div style="display: flex; align-items: center; justify-content: center; background-color: #f9f9f9; border-bottom: 1px solid #ccc; padding: 12px 0; gap: 24px;">
-      <span style="font-weight: bold; font-size: 1rem; color: #333;">Connect:</span>
+      <span style="font-weight: 600; font-size: 1.1rem; color: #222; font-family: sans-serif;">📣 Connect with us:</span>
       <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group">
           <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 30px; width: 30px;">
       </a>
@@ -56,7 +56,7 @@
           <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
       </a>
       <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
-          <img src="https://seeklogo.com/images/S/substack-logo-DA74D7C2FE-seeklogo.com.png" alt="Substack" style="height: 30px; width: 30px;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Substack_logo.svg" alt="Substack" style="height: 30px; width: 30px;">
       </a>
     </div>
 
