more index page updates

--- a/index.html
+++ b/index.html
@@ -47,18 +47,7 @@
 
 <body>    
 
-    <div style="display: flex; align-items: center; justify-content: center; background-color: #f9f9f9; border-bottom: 1px solid #ccc; padding: 12px 0; gap: 24px;">
-      <span style="font-weight: 600; font-size: 1.1rem; color: #222; font-family: sans-serif;">📣 Connect with us:</span>
-      <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 30px; width: 30px;">
-      </a>
-      <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
-      </a>
-      <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Substack_logo.svg" alt="Substack" style="height: 30px; width: 30px;">
-      </a>
-    </div>
+    
 
     <div class="menu-wrap menu-wrap-homepage">
         <input type="checkbox" autocomplete='off' id="toggler" class="toggler">
@@ -149,7 +138,7 @@
         </div>
     </div>
 
-    <div class="cta-banner">
+    <!-- <div class="cta-banner">
         <div class="cta-banner-heading">
             Primary Season is well under way. Check the elections section for information.
         </div>
@@ -162,24 +151,54 @@
                  <button id='actualVideo' class="hp-banner-button">Video</button>
             </div>
         </div>
-    </div>
+    </div> -->
+
     <div class="cta-banner2">
         <div class="cta-banner-heading centered">
-            ***2025 METHODS AND PROCESSES UPDATE***
+            We're Transitioning Into General Election Mode
         </div>
         <div class="cta-content centered">
             <div class="cta-text">
-                Our approach this year will be a bit different, a little more direct and a little less benefit of the doubt. 
+                The site is being updated — stay connected as the campaign season unfolds. 
                 <details>
                     <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
-                    When we first started doing this, it was understandable for many candidates to not communicate with the new kids on the block. Leadership is busy, that's understandable. 
-                    During our second year, we made some progress with figuring out community networking and how local politics work. Now that we're in our third year, some 
-                    things are clear: The local politicians know who we are and what we're trying to accomplish. Everyone has been contacted through various means. If we 
-                    don't have the info, it's because people either aren't cooperating, or there is no info to convey. So we're making the language a little more clear to 
-                    reflect that, and we've added a transparency meter to our candidate pages to give readers a rough idea of who is on top of letting voters know what's up to a 
-                    reasonably sufficient standard, and who isn't. Also, be sure to go into candidate's quick summaries on their candidate pages for our impressions.
+                    As we shift from the primary to the general election season, this site is currently in a transitional phase. Over the next month or so, some pages may still reflect 
+                    outdated primary content, and candidate information for the general election may appear incomplete.
+                    <br>
+                    <br>
+                    This is expected. It’s still early in the season, and many candidates are just beginning to shape their campaigns. We're also waiting on official materials — including 
+                    full candidate lists and contact info from sources like the Millville City Clerk — before building out new pages.
+                    <br>
+                    <br>
+                    While that information trickles in, we’re using this time to raise awareness of the project:
+                    <ul>
+                      <li>We're collecting emails for our new Substack newsletter, where voters can get updates directly in their inbox.</li>
+                      <br>
+                      <li>We're continuing our weekly radio show on 92.1 WVLT every Tuesday from 5–6pm.</li>
+                      <br>
+                      <li>We'll be out at community events like the Cumberland County Fair and other public meetings to keep building trust and visibility.</li>
+                    </ul>
+                    <br>
+                    <br>
+                    Thanks for your patience while the site evolves. If you're new here, now's a great time to subscribe to email updates or catch up on our interviews and candidate 
+                    transparency work so far.
             </div>
         </div>
+    </div>
+
+    <br>
+    
+    <div style="display: flex; align-items: center; justify-content: center; background-color: #f9f9f9; border-bottom: 1px solid #ccc; padding: 12px 0; gap: 24px;">
+      <span style="font-weight: 600; font-size: 1.1rem; color: #222; font-family: sans-serif;">📣 Connect with us:</span>
+      <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 30px; width: 30px;">
+      </a>
+      <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
+      </a>
+      <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Substack_logo.png" alt="Substack" style="height: 30px; width: 30px;">
+      </a>
     </div>
 
     <!-- text summary modal -->
