more index updates

--- a/index.html
+++ b/index.html
@@ -199,10 +199,14 @@
       <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
           <img src="assets/substackIcon.png" alt="Substack" style="height: 30px; width: 30px;">
       </a>
+    </div>
 
-      <details style="margin: 1.5em 0; font-family: sans-serif;">
-        <summary style="font-size: 1.1em; font-weight: bold; cursor: pointer;">
-          📡 Why We're Using Multiple Platforms to Share Election Information
+    <br>
+    <br>
+
+    <details style="margin: 1.5em 0; font-family: sans-serif;">
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">
+          📡 Learn More About Why We're Using Multiple Platforms
         </summary>
         <div style="padding: 1em 1.2em; border-left: 4px solid #ccc; margin-top: 0.5em; background: #f9f9f9;">
           <p>
@@ -240,7 +244,6 @@
           </p>
         </div>
       </details>
-    </div>
 
     <!-- text summary modal -->
     <dialog id="Modal1" class="modal">
