more index page updates

--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
     <br>
     <br>
 
-    <details style="margin: 1.5em 0; font-family: sans-serif;">
-        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">
-          📡 Learn More About Why We're Using Multiple Platforms
+    <div style="display: flex; justify-content: center; width: 100%;">
+      <details style="font-family: sans-serif; max-width: 800px; width: 100%;">
+        <summary style="font-size: 1.1em; font-weight: bold; cursor: pointer; text-align: center;">
+          📡 Why We're Using Multiple Platforms to Share Election Information
         </summary>
         <div style="padding: 1em 1.2em; border-left: 4px solid #ccc; margin-top: 0.5em; background: #f9f9f9;">
           <p>
@@ -216,13 +217,18 @@
             Some candidates had websites. Others posted sporadically on social media. A few only spoke during committee meetings. There was no centralized pipeline, and voters were left to piece things together. My goal is to make those connections clearer, easier, and more consistent than when I started — no matter where you like to tune in.
           </p>
           <h4 style="margin-top: 1.2em;">🧭 Different Tools for Different People</h4>
+          <br>
           <p>
             Not everyone uses technology the same way. So instead of expecting voters to all follow one channel, I’m using a mix of formats:
           </p>
+          <br>
           <ul>
             <li>📬 <strong>Email Newsletters (Substack):</strong> for people who avoid social media</li>
+            <br>
             <li>🎥 <strong>YouTube:</strong> for people who prefer video content and interviews</li>
+            <br>
             <li>💬 <strong>Facebook Group:</strong> for those who like ongoing posts and discussion threads</li>
+            <br>
             <li>🌐 <strong>This Website:</strong> for structured, long-term reference</li>
           </ul>
           <p>Each of these serves a different type of voter — and that’s important.</p>
@@ -240,10 +246,12 @@
             <li>Make confident, informed choices without going down every rabbit hole</li>
           </ul>
           <p>
-            This site is not meant to be a daily newsfeed — it’s meant to be a <strong>voter’s guide</strong>, especially in those final days and weeks when decisions are made.
+            This site is not meant to be a daily newsfeed — it’s meant to be a <strong>voter’s guide</strong>, especially in those final days and 
+            weeks when decisions are made.
           </p>
         </div>
       </details>
+    </div>
 
     <!-- text summary modal -->
     <dialog id="Modal1" class="modal">
