--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         <div class="cta-content centered">
             <div class="cta-text">
                 The site is being updated — stay connected as the campaign season unfolds. 
+                <br>
                 <details>
                     <summary style="font-size: 1em; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                     As we shift from the primary to the general election season, this site is currently in a transitional phase. Over the next month or so, some pages may still reflect 
@@ -196,20 +197,20 @@
 
         <div class="cta-content centered">
             <div class="cta-text">
-                <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group">
+                <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group" style="margin-right: 16px;">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 30px; width: 30px;">
                 </a>
-                <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube">
+                <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube" style="margin-right: 16px;">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
                 </a>
-                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
+                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates" style="margin-right: 16px;">
                     <img src="assets/substackIcon.png" alt="Substack" style="height: 30px; width: 30px;">
                 </a>
             </div>
         </div>
               
         <details>
-                <summary style="font-size: 1em; cursor:pointer; color:blue; text-decoration:underline;">Learn More Regarding Multiple Platforms</summary>
+                <summary style="font-size: 1em; cursor: pointer; color: blue; text-decoration: underline; text-align: center; font-weight: bold;">
                     <p>
                       When I first started InformTheVoteNJ, it became clear that local election information wasn’t hard to understand — it was just hard to <em>find</em>.
                     </p>
