more style index page

--- a/index.html
+++ b/index.html
@@ -197,20 +197,20 @@
 
         <div class="cta-content centered">
             <div class="cta-text">
-                <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group" style="margin-right: 16px;">
+                <a href="https://www.facebook.com/groups/781111154116727" target="_blank" aria-label="Facebook Group" style="margin-right: 32px">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="height: 30px; width: 30px;">
                 </a>
-                <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube" style="margin-right: 16px;">
+                <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube" style="margin-right: 32px">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
                 </a>
-                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates" style="margin-right: 16px;">
+                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates" style="margin-right: 32px">
                     <img src="assets/substackIcon.png" alt="Substack" style="height: 30px; width: 30px;">
                 </a>
             </div>
         </div>
               
         <details>
-                <summary style="font-size: 1em; cursor: pointer; color: blue; text-decoration: underline; text-align: center; font-weight: bold;">
+                <summary style="font-size: 1em; cursor: pointer; color: blue; text-decoration: underline; text-align: center; font-weight: bold;">Learn More Regarding Multiple Platforms</summary>
                     <p>
                       When I first started InformTheVoteNJ, it became clear that local election information wasn’t hard to understand — it was just hard to <em>find</em>.
                     </p>
