--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <div class="cta-text">
                 The site is being updated — stay connected as the campaign season unfolds. 
                 <br>
+                <br>
                 <details>
                     <summary style="font-size: 1em; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                     As we shift from the primary to the general election season, this site is currently in a transitional phase. Over the next month or so, some pages may still reflect 
@@ -203,7 +204,7 @@
                 <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube" style="margin-right: 32px">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
                 </a>
-                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates" style="margin-right: 32px">
+                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
                     <img src="assets/substackIcon.png" alt="Substack" style="height: 30px; width: 30px;">
                 </a>
             </div>
@@ -211,6 +212,7 @@
               
         <details>
                 <summary style="font-size: 1em; cursor: pointer; color: blue; text-decoration: underline; text-align: center; font-weight: bold;">Learn More Regarding Multiple Platforms</summary>
+                  <div style="text-align: center; font-weight: bold;">
                     <p>
                       When I first started InformTheVoteNJ, it became clear that local election information wasn’t hard to understand — it was just hard to <em>find</em>.
                     </p>
@@ -250,6 +252,7 @@
                       This site is not meant to be a daily newsfeed — it’s meant to be a <strong>voter’s guide</strong>, especially in those final days and 
                       weeks when decisions are made.
                     </p>
+                  </div>
         </details>
     </div>
 
