--- a/index.html
+++ b/index.html
@@ -204,13 +204,15 @@
                 <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" aria-label="YouTube" style="margin-right: 32px">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="height: 30px; width: 30px;">
                 </a>
-                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates">
+                <a href="https://informthevotenj.substack.com/subscribe" target="_blank" aria-label="Substack Email Updates" style="margin-right: 32px">
                     <img src="assets/substackIcon.png" alt="Substack" style="height: 30px; width: 30px;">
                 </a>
+                <a href="https://www.facebook.com/wvltradio" target="_blank" aria-label="WVLT Facebook Site With Livestreams">
+                    <img src="assets/wvltLogo.png" alt="Substack" style="height: 30px; width: 30px;">
+                </a>
             </div>
-        </div>
-              
-        <details>
+
+            <details>
                 <summary style="font-size: 1em; cursor: pointer; color: blue; text-decoration: underline; text-align: center; font-weight: bold;">Learn More Regarding Multiple Platforms</summary>
                   <div style="text-align: center; font-weight: bold;">
                     <p>
@@ -231,6 +233,8 @@
                       <li>🎥 <strong>YouTube:</strong> for people who prefer video content and interviews</li>
                       <br>
                       <li>💬 <strong>Facebook Group:</strong> for those who like ongoing posts and discussion threads</li>
+                      <br>
+                      <li>📻 <strong>WVLT 92.1 FM Radio:</strong> for those who want to tune in live on the radio, stream on Facebook, or catch prior episodes in the Facebook group</li>
                       <br>
                       <li>🌐 <strong>This Website:</strong> for structured, long-term reference</li>
                     </ul>
@@ -253,7 +257,8 @@
                       weeks when decisions are made.
                     </p>
                   </div>
-        </details>
+            </details>
+        </div>
     </div>
 
     <!-- text summary modal -->
