break tag added for desktop home page

--- a/index.html
+++ b/index.html
@@ -208,10 +208,12 @@
                     <img src="assets/substackIcon.png" alt="Substack" style="height: 30px; width: 30px;">
                 </a>
                 <a href="https://www.facebook.com/wvltradio" target="_blank" aria-label="WVLT Facebook Site With Livestreams">
-                    <img src="assets/wvltLogo.png" alt="Substack" style="height: 30px; width: 30px;">
+                    <img src="assets/wvltLogo.png" alt="WVLT Facebook" style="height: 30px; width: 30px;">
                 </a>
             </div>
 
+            <br>
+            
             <details>
                 <summary style="font-size: 1em; cursor: pointer; color: blue; text-decoration: underline; text-align: center; font-weight: bold;">Learn More Regarding Multiple Platforms</summary>
                   <div style="text-align: center; font-weight: bold;">
