--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -198,7 +198,8 @@
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
                  
-                 
+                <a href="https://www.facebook.com/profile.php?id=61550738146589" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
+
              </div>
 
              <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
