--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -103,13 +103,55 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Carole E. Cossaboon</h6>
               <p>
-                Ms. Cossaboon has been a resident of Millville her whole life and has a wide range of relevant political experience including having worked for the 
-                Millville Board of Education for over 30 years, 'sitting as a board of director' for the for Shirley Eves Developmental Center, being the 
-                Lodge Secretary for the Millville Elks, being the treasurer/negotiator/grievance chair for the Millville Education Association, and more.
-                Her vision as a commissioner is to be an independent voice for common sense that will help bring unity to the board and accomplish goals for the 
-                city, such as attracting jobs at the industrial parks and airport, tackle the issue of absentee landlords, and demolish properties when 
-                necessary.
+                Carole Cossaboon is the incumbent Millville City Commissioner, appointed in early 2025 to fill a vacancy and now running for a full term. A lifelong Millville resident, she has 
+                over 30 years of experience working in public education as an administrative assistant at Holly Heights School and as a substitute teacher. She holds an associate degree in 
+                education, a bachelor’s degree in sociology, and a graduate certificate in autism and behavior.
+                <br>
+                <br>
+                Cossaboon has been active in a wide range of community organizations, including the Millville Elks, the Planning Board, the UEZ Board, and several civic and charitable boards and 
+                clubs. She emphasizes accountability in local government, advocating for stricter enforcement on absentee landlords, more inspections of vacant properties, and cleaner, safer 
+                neighborhoods as a foundation for economic development.
+                <br>
+                <br>
+                Her platform focuses on addressing blight, improving code enforcement, and boosting public safety staffing to meet state standards. She also supports working with outside agencies 
+                to attract businesses, writing grants for local programs, and learning from other communities to create opportunities in Millville.
+                <br>
+                <br>
+                Cossaboon describes herself as approachable, candid, and respectful. As a registered Independent, she stresses that her only agenda is to work collaboratively with fellow 
+                commissioners, regardless of party affiliation, to serve the city’s residents. She plans to continue attending community events, meeting directly with voters, and listening to 
+                concerns as the election approaches.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              </p>
+            </div>
+        </dialog>
+
+        <dialog id="Modal2" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
+              <h4 class="quick-sum">Rating Explanation</h4>
+              <h6 class="page-title">Carole Cossaboon</h6>
+              <p>          
+
+                As a sitting commissioner, Carole Cossaboon has demonstrated commendable transparency by responding to the candidate questionnaire early in the general election season. This 
+                positions her ahead of the curve in terms of providing voters with clear information about her experience and priorities.
+                <br>
+                <br>
+                That said, this is a crowded race, and significant additional information and public engagement will likely emerge over the next several months. While Commissioner Cossaboon has 
+                been responsive in written format, there has been no indication so far of interest in scheduling a radio interview or a more in-depth podcast closer to the election. These formats 
+                are not mandatory, and candidates have every right to set their own campaign strategies and timing; however, because the opportunity was presented early and no plans were made, 
+                it is important to note that this decision could impact public perception of accessibility later in the season.
+                <br>
+                <br>
+                Overall, the early cooperation and thorough written responses reflect a positive level of transparency, with room to strengthen this further through more live or recorded 
+                public-facing dialogue as the campaign progresses.
+                <br>
+                <br>
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+
               </p>
             </div>
         </dialog>
@@ -162,6 +204,14 @@
          </div>
      </div>
 
+     <div class="gauge-box">
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average </h4>
+        <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
+
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
+        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+    </div> 
+
     <div class="title-info">
        
     <div class="candidate-agenda">
@@ -191,6 +241,13 @@
                 <br>
                 <br>
                 I may be short in stature, but I am big on respect for everyone.
+
+                <br>
+                <br>
+                Having been a public employee in the education field for over thirty years, I have obtained valuable knowledge and experience which I feel would be beneficial for both taxpayers 
+                of Millville and the current City Commissioners as well. I have the ability to view both sides of an issue, ask questions before giving a decision, as well as respect other’s 
+                opinions whether I agree or disagree. I understand the diversity of our city and have gained the respect of the families and colleagues that I have interacted with throughout my 
+                career. I can bring experience and time to invest in our city and work with this current commission and community to bring about positive changes for the city of Millville.
             </div>
 
             <br>
@@ -224,16 +281,18 @@
 
             <h4 class="sub-heading">Overall Experience and Background</h4>
             <div class="experience can-sec">
-                <h5>Work Experience</h5>
+                <h4>Work Experience</h4>
+                <br>
                     <ul>
                         <li>
                             <details>
-                            <summary><strong>Millville Board of Education – Holly Heights School (Administrative Assistant, 1983–2013)</strong></summary>
+                            <summary style="color: blue;"><strong>Millville Board of Education – Holly Heights School (Administrative Assistant, 1983–2013)</strong></summary>
                             <p>
                                 Responsibilities included ensuring the smooth operation of the school, handling all parental correspondence for the principal, managing the financial budget, processing purchase orders, scheduling parent conferences, and maintaining all office equipment and procedures. Proficient in Microsoft Word, Excel, and Word Perfect. Skilled in collaboration with staff and effective communication with parents, students, teachers, and administration. Strong understanding of the community’s diversity.
                             </p>
                             </details>
                         </li>
+                        <br>
                         <li>
                             <details>
                             <summary><strong>Downe Township Elementary School (Substitute Teacher, 2017–2023)</strong></summary>
@@ -244,21 +303,27 @@
                         </li>
                     </ul>
 
-                    <h5>Education</h5>
+                    <br>
+                    <br>
+                    <h4>Education</h4>
                     <ul>
                         <li>Associate of Arts in Education – Cumberland County College</li>
+                        <br>
                         <li>Bachelor of Arts in Sociology – Thomas Edison College</li>
+                        <br>
                         <li>Certificate of Graduate Study in Autism and Behavior – Rowan University</li>
                     </ul>
 
-                    <h5>Community Involvement</h5>
+                    <br>
+                    <br>
+                    <h4>Community Involvement</h4>
                     <p>
                     Community involvement is an important part of every community. Resourcefulness is one of the most important qualities in a community leader. Leaders help set goals and promote 
                     positive changes by example.
                     </p>
 
                     <details>
-                    <summary><strong>Currently Active</strong></summary>
+                    <summary style="color: blue;"><strong>Currently Active</strong></summary>
                     <ul>
                         <li>Millville Elks – Lodge Secretary, grant writer for funding community projects serving underprivileged youth, veterans, the homeless, and food banks; manages weekly Bingo fundraising events</li>
                         <li>Millville Planning Board – Member</li>
@@ -269,9 +334,9 @@
                         <li>Millville Woman’s Club – Member</li>
                     </ul>
                     </details>
-
+                    <br>
                     <details>
-                    <summary><strong>Previously Involved</strong></summary>
+                    <summary style="color: blue;"><strong>Previously Involved</strong></summary>
                     <ul>
                         <li>Millville Soccer League – Executive Board</li>
                         <li>Bacon School PTA – President & Treasurer</li>
