--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -156,6 +156,7 @@
               </p>
             </div>
         </dialog>
+        
         <dialog id="Modal2" class="modal">
 
             <!-- Modal content -->
@@ -280,7 +281,7 @@
                     <br>
                     <li>
                         <details>
-                        <summar style="color: blue;"y><strong>Communication</strong></summary>
+                        <summar style="color: blue;"><strong>Communication</strong></summary>
                         <p>
                             <ul>
                             <li>Establish a “point person” to share information among commissioners and administrators via weekly reports.</li>
@@ -389,6 +390,7 @@
             <h4 class="sub-heading">Experience</h4>
                 <div class="experience can-sec">
                      <h4>Organizations</h4>
+                     <br>
                         <ul>
                         <li>
                             <details>
@@ -427,7 +429,7 @@
                         </ul>
 
                         <br>
-                        
+                        <br>
 
                         <h4>Professional and Work Background</h4>
                             <ul>
