more small updates for kears and cossaboon

--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -194,7 +194,7 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/cossaboon.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  <!-- <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fa-brands fa-facebook" style="color: blue"></i></a> -->
                  <!-- <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fab fa-facebook-f"></i>Campaign Facebook</a> -->
@@ -315,7 +315,7 @@
                         <br>
                         <li>
                             <details>
-                            <summary><strong>Downe Township Elementary School (Substitute Teacher, 2017–2023)</strong></summary>
+                            <summary style="color: blue;"><strong>Downe Township Elementary School (Substitute Teacher, 2017–2023)</strong></summary>
                             <p>
                                 Worked as a substitute teacher supporting classrooms across grade levels.
                             </p>
@@ -326,6 +326,7 @@
                     <br>
                     <br>
                     <h4>Education</h4>
+                    <br>
                     <ul>
                         <li>Associate of Arts in Education – Cumberland County College</li>
                         <br>
@@ -337,6 +338,7 @@
                     <br>
                     <br>
                     <h4>Community Involvement</h4>
+                    <br>
                     <p>
                     Community involvement is an important part of every community. Resourcefulness is one of the most important qualities in a community leader. Leaders help set goals and promote 
                     positive changes by example.
