--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -156,7 +156,7 @@
               </p>
             </div>
         </dialog>
-        
+
         <dialog id="Modal2" class="modal">
 
             <!-- Modal content -->
@@ -196,7 +196,7 @@
      <div class="candidate-pic-box">
          <!-- <img class="cover" src="../../../assets/candidates/.jpg" class="candidate-pic"> -->
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
                 <a href="https://www.facebook.com/profile.php?id=61550738146589" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
