millville quick summary added

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -126,8 +126,15 @@
           <p>
             
 
-            
-
+            This year’s Millville City Commissioners race is shaping up to be one of the most crowded in recent memory. All five seats are open, and there are already reports that as many as 25 
+            candidates may file to run. That’s a lot to keep track of, and it’s still early in the season, so much of the information is yet to come in.
+            <br>
+            <br>
+            At this stage, incumbent Carole Cossaboon has submitted her responses to the candidate questionnaire, and Patricia Clarke-Kears has shared a detailed platform and recently appeared on 
+            my radio show on July 8, 2025. Voters interested in learning more should check back throughout the campaign as additional candidates release their plans and more interviews and updates 
+            are posted.
+            <br>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
