kears pic added

--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -194,7 +194,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <!-- <img class="cover" src="../../../assets/candidates/.jpg" class="candidate-pic"> -->
+         <img class="cover" src="../../../assets/candidates/kears.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
@@ -210,15 +210,15 @@
              </div>
 
              <div class="animal-box">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
